# chem-properties

./: .gitignore  07-kmeanhrm.ipynb  LICENSE  README.md  SOURCES.md  main.py  pyproject.toml  pyrightconfig.json
checkpoints/hrm/: best.pt  history.json
src/: 00-template.ipynb  01-vis-data.ipynb  02-graph-transformations.ipynb  03-py-scf.ipynb  04-first-nn-pass.ipynb  05-xtb-calc-test.ipynb  06-hrm-test.ipynb  data_gen_helpers.py  dataset_helpers.py  hrm_models.py  kmeans_hrm_model.py  opt_helpers.py  original_models.py  permute_helpers.py  training_loops.py
