[project]
name = "chem-properties"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "pandas>=2.3.2",
    "pyscf>=2.10.0",
    "pysmiles>=2.0.0",
    "rdkit>=2025.3.5",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
